# exif-io

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  cspell.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
src/: lib.rs  tag.rs  types.rs
src/tag/: image.rs
