[package]
authors = ["Avinash Maddikonda <svasssakavi@gmail.com>"]
categories = [
    "data-structures",
    "encoding",
    "filesystem",
    "multimedia::encoding",
    "multimedia::images",
]
description = "A Rust library crate to read and write image EXIF data."
edition = "2021"
homepage = "https://docs.rs/crate/exif-io"
keywords = ["exif", "image", "metadata", "read", "write"]
license = "MIT"
name = "exif-io"
repository = "https://github.com/SFM61319/exif-io"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = { version = "0.15.1", default-features = false }
